--- a/move/tan.html
+++ b/move/tan.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>智能社-http://www.zhinengshe.com</title>
+<title>弹性运动</title>
 <style>
-#div1{ width:100px; height:100px; background:red; position:absolute; left:0; top:0;}
+#div1{ width:100px; height:100px; background:url(../image/tan.jpg) no-repeat; background-size:100px; position:absolute; left:0; top:0;}
 
 .box{ width:5px; height:5px; position:absolute; background:#000;}
 </style>
@@ -17,7 +17,7 @@ window.onload=function(){
 	var lastX=0;
 	var lastY=0;
 	var timer=null;
-	
+	duangMove();
 	oDiv.onmousedown=function(ev){
 		var oEvent=ev || event;
 		
@@ -58,23 +58,23 @@ window.onload=function(){
 			
 			if(t>=document.documentElement.clientHeight-oDiv.offsetHeight){
 				t=document.documentElement.clientHeight-oDiv.offsetHeight;
-				iSpeedY*=-0.8;
-				iSpeedX*=0.8;	
+				iSpeedY*=-0.9;
+				iSpeedX*=0.9;	
 			}
 			if(t<=0){
 				t=0;
-				iSpeedY*=-0.8;
-				iSpeedX*=0.8;	
+				iSpeedY*=-0.9;
+				iSpeedX*=0.9;	
 			}
 			if(l>=document.documentElement.clientWidth-oDiv.offsetWidth){
 				l=document.documentElement.clientWidth-oDiv.offsetWidth;
-				iSpeedX*=-0.8;
-				iSpeedY*=0.8;	
+				iSpeedX*=-0.9;
+				iSpeedY*=0.9;	
 			}
 			if(l<=0){
 				l=0;
-				iSpeedX*=-0.8;
-				iSpeedY*=0.8;	
+				iSpeedX*=-0.9;
+				iSpeedY*=0.9;	
 			}
 			
 			oDiv.style.left=l+'px';
