--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 			</div>
 			<ul class="clearFix">
 				<li class="ani"><span></span>刘洋志</li>
-				<li class="ani"><span></span>877785919</li>
-				<li class="ani"><span></span>承德石油高等专科学校</li>
-				<li class="ani"><span></span>877785919@qq.com</li>
+				<li class="ani"><span></span>承德石油高专</li>
 				<li class="ani"><span></span>13522505057</li>
+				<li class="ani"><span></span>877785919</li>
+				<li class="ani"><span></span>877785919@qq.com</li>
 			</ul>
 		</div>
 		<div class="box_z">
