--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 			</div>
 			<ul class="clearFix">
 				<li class="ani"><span></span>刘洋志</li>
-				<li class="ani"><span></span>承德石油高专</li>
-				<li class="ani"><span></span>13522505057</li>
 				<li class="ani"><span></span>877785919</li>
+				<li class="ani"><span></span>承德石油高等专科学校</li>
 				<li class="ani"><span></span>877785919@qq.com</li>
+				<li class="ani"><span></span>13522505057</li>
 			</ul>
 		</div>
 		<div class="box_z">
@@ -118,12 +118,11 @@
 					<p>我的技能</p>
 					<div class="ball_img">
 						<img src="image/js.png" style="width:154px ;margin-top:20px;margin-left:5px">
-			            <img src="image/html5.png" style="width:74px;margin-top:20px;margin-left:5px">
-			            <img src="image/css3.png" style="width:118px;margin-top:20px;margin-left:5px">
-			            <img src="image/pss.png" style="width:70px;margin-top:20px;margin-left:5px">
-			            <img src="image/dw.png" style="width:84px;margin-top:20px;margin-left:5px">
+				        	<img src="image/html5.png" style="width:74px;margin-top:20px;margin-left:5px">
+				        	<img src="image/css3.png" style="width:118px;margin-top:20px;margin-left:5px">
+				        	<img src="image/pss.png" style="width:70px;margin-top:20px;margin-left:5px">
+				        	<img src="image/dw.png" style="width:84px;margin-top:20px;margin-left:5px">
 					</div>
-					
 				</div>
 			</div>
 		</div>
@@ -149,8 +148,4 @@
 		</div>
 	</div>
 </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 935d9791ef7ab0910e86f5b9147bf88dc8bf5f42
