--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				<li class="lbt"><span><a href="move/move_fen.html" targit="_blank">分块运动</a></span></li>
 				<li class="pg"><span><a href="move/nav.html" targit="_blank">苹果菜单</a></span></li>
 				<li class="tan"><span><a href="move/tan.html" targit="_blank">弹性运动</a></span></li>
-				<li class="bd"><span><a href="move/baidu.html" targit="_blank">jsonpb百度搜索</a></span></li>
+				<li class="bd"><span><a href="move/baidu.html" targit="_blank">jsonp百度搜索</a></span></li>
 			</ul>
 		</div>
 	</div>
