--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
 		</ul>
 	</header>
 	<div class="box" id="large-header">
-		<div id="large-header" class="large-header">
-			<canvas id="demo-canvas"></canvas>
-			<script src="js/TweenLite.min.js"></script>
-			<script src="js/EasePack.min.js"></script>
-			<script src="js/demo-1.js"></script>
-		</div>
 		<div class="box_z">
 			<div class="can_box">
 				<canvas id="c1" width="800" height="600"></canvas>
@@ -57,10 +51,10 @@
 			</div>
 			<ul class="clearFix">
 				<li class="ani"><span></span>刘洋志</li>
-				<li class="ani"><span></span>承德石油高等专科学校</li>
-				<li class="ani"><span></span>13522505057</li>
 				<li class="ani"><span></span>877785919</li>
+				<li class="ani"><span></span>承德石油高等专科学校</li>
 				<li class="ani"><span></span>877785919@qq.com</li>
+				<li class="ani"><span></span>13522505057</li>
 			</ul>
 		</div>
 		<div class="box_z">
@@ -118,11 +112,12 @@
 					<p>我的技能</p>
 					<div class="ball_img">
 						<img src="image/js.png" style="width:154px ;margin-top:20px;margin-left:5px">
-				        	<img src="image/html5.png" style="width:74px;margin-top:20px;margin-left:5px">
-				        	<img src="image/css3.png" style="width:118px;margin-top:20px;margin-left:5px">
-				        	<img src="image/pss.png" style="width:70px;margin-top:20px;margin-left:5px">
-				        	<img src="image/dw.png" style="width:84px;margin-top:20px;margin-left:5px">
+			            <img src="image/html5.png" style="width:74px;margin-top:20px;margin-left:5px">
+			            <img src="image/css3.png" style="width:118px;margin-top:20px;margin-left:5px">
+			            <img src="image/pss.png" style="width:70px;margin-top:20px;margin-left:5px">
+			            <img src="image/dw.png" style="width:84px;margin-top:20px;margin-left:5px">
 					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -143,7 +138,7 @@
 				<li class="lbt"><span><a href="move/move_fen.html" targit="_blank">分块运动</a></span></li>
 				<li class="pg"><span><a href="move/nav.html" targit="_blank">苹果菜单</a></span></li>
 				<li class="tan"><span><a href="move/tan.html" targit="_blank">弹性运动</a></span></li>
-				<li class="bd"><span><a href="move/baidu.html" targit="_blank">jsonpb百度搜索</a></span></li>
+				<li class="bd"><span><a href="move/baidu.html" targit="_blank">jsonp百度搜索</a></span></li>
 			</ul>
 		</div>
 	</div>
